# Arduino-CMake-Toolchain

./: README.md
Arduino/System/: PackagePathIndex.cmake
Arduino/Templates/Scripts/: ToolScript.cmake.in
Examples/: CMakeLists.txt
